[package]
name = "memers"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.28"
anyhow = "1.0.75"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
crossbeam-channel = "0.5.0"
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-contract = "2.0"
ethers = { version = "2.0", features = ["abigen", "ws"] }

colored = "2.0.4"
log = "0.4.20"
fern = { version = "0.6.2", features = ["colored"] }
chrono = "0.4.31"
rand = "0.8.5"
